almost finished homescreen

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,8 +11,9 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Meteoapp"
+        android:theme="@style/AppTheme"
         tools:targetApi="31">
+        <!-- android:theme="@style/AppTheme" serve a togliere la barrra in cima con il nome dell'app -->
         <activity
             android:name=".MainActivity"
             android:exported="true">
