--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,7 +10,7 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme"
+        android:theme="@style/Theme.Meteoapp"
         tools:targetApi="31">
         <!-- android:theme="@style/AppTheme" serve a togliere la barrra in cima con il nome dell'app -->
         <activity
