--- a/app/build.gradle
+++ b/app/build.gradle
@@ -61,6 +61,7 @@ android {
 
 dependencies {
     implementation 'androidx.databinding:databinding-runtime:8.0.0'
+    implementation 'com.google.android.gms:play-services-location:21.0.1'
     def nav_version = "2.5.3"
 
 
