--- a/app/build.gradle
+++ b/app/build.gradle
@@ -18,7 +18,7 @@ android {
 
     defaultConfig {
         applicationId "co.develhope.meteoapp"
-        minSdk 23
+        minSdk 24
         targetSdk 32
         versionCode 1
         versionName "1.0"
@@ -62,7 +62,7 @@ android {
 dependencies {
     implementation 'androidx.databinding:databinding-runtime:8.0.0'
     def nav_version = "2.5.3"
-
+    def compose_version = "1.1.1"
 
     implementation 'com.jakewharton.threetenabp:threetenabp:1.3.1'
     implementation 'androidx.core:core-ktx:1.7.0'
@@ -82,5 +82,11 @@ dependencies {
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
     implementation "io.insert-koin:koin-android:3.1.4"
+    implementation "androidx.compose.ui:ui:$compose_version"
+    implementation "androidx.compose.material:material:$compose_version"
+    implementation "androidx.compose.ui:ui-tooling-preview:$compose_version"
+    androidTestImplementation "androidx.compose.ui:ui-test-junit4:$compose_version"
+    debugImplementation "androidx.compose.ui:ui-tooling:$compose_version"
+
 
 }
