--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,7 +20,7 @@
         tools:targetApi="31">
         <!-- android:theme="@style/AppTheme" serve a togliere la barrra in cima con il nome dell'app -->
         <activity
-            android:name=".features.MainActivity"
+            android:name=".features.ui.main.MainActivity"
             android:exported="true"
             android:windowSoftInputMode="adjustPan">
             <intent-filter>
